# Humane-RAFW-NE

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  client-configs.json
.github/workflows/: lint-md.yml  lint.yml  spdx.yml  test.yml
client/: Cargo.toml
client/src/: attestation.rs  crypto.rs  main.rs  types.rs
docs/: architecture.md
enclave/: Cargo.toml  Dockerfile
enclave/src/: crypto.rs  main.rs  nsm.rs  session.rs  types.rs
proxy/: Cargo.toml
proxy/src/: main.rs
scripts/: download-root-ca.sh  setup-client.sh  setup-docker.sh  setup-nitro-cli.sh
