[workspace]
resolver = "3"
members = [
	"client",
	"enclave",
	"proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Acompany Co., Ltd."]
license = "MIT"
repository = "https://github.com/acompany-develop/Humane-RAFW-NE"
description = "Remote Attestation Framework for AWS Nitro Enclaves"
readme = "README.md"
exclude = [".gitignore", ".github/*"]

[workspace.dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.16.2"
aws-nitro-enclaves-cose = "0.5.2"
aws-nitro-enclaves-nsm-api = "0.4.0"
base64 = "0.22.1"
clap = "4.5.54"
hex = "0.4.3"
minicbor = "2.2.1"
openssl = "0.10.75"
serde = "1.0.228"
serde_json = "1.0.149"
tiny_http = "0.12.0"
ureq = "3.1.4"
vsock = "0.5.2"
x509-parser = "0.18.0"
