[package]
name = "rafwne-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
aws-nitro-enclaves-cose.workspace = true
aws-lc-rs.workspace = true
base64.workspace = true
hex.workspace = true
openssl.workspace = true
p256 = { workspace = true, features = ["ecdh"] }
p384 = { workspace = true, features = ["ecdsa", "sha384"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
ureq.workspace = true
x509-parser.workspace = true
