[package]
name = "rafwne-enclave"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.15.4"
aws-nitro-enclaves-nsm-api = "0.4.0"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
serde = "1.0.228"
serde_json = "1.0.149"
vsock = "0.5.2"
