[package]
name = "rafwne-enclave"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
aws-lc-rs.workspace = true
aws-nitro-enclaves-nsm-api.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
p256 = { workspace = true, features = ["ecdh"] }
serde.workspace = true
serde_json.workspace = true
vsock.workspace = true
